--- a/index.html
+++ b/index.html
@@ -1,1 +1,27 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title>Jason Hochheiser</title>
+  </head>
+  <body>
+    <nav>
+<a href="About Me">About Me</a> |
+<a href="Projects">Projects</a> |
+</nav>
+
+<h1>Jason Hochheiser</h1>
+<h3>Jr. Programmer</h3>
+
+<section>
+  <h2>About Me</h2>
+  <p>I am a junior programmer with full-stack coding experience based in Java.</p>
+  <img src="\Pictures\2018-09-30 001\FB_IMG_1538341854022" alt="">
+
+</section>
+
+
+
+
+  </body>
+</html>
