redo the commit

--- a/index.html
+++ b/index.html
@@ -1,27 +1,41 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Jason Hochheiser</title>
-  </head>
-  <body>
-    <nav>
-<a href="About Me">About Me</a> |
-<a href="Projects">Projects</a> |
-</nav>
 
-<h1>Jason Hochheiser</h1>
-<h3>Jr. Programmer</h3>
+<head>
+  <meta charset="utf-8">
+  <title>Jason Hochheiser</title>
+</head>
 
-<section>
-  <h2>About Me</h2>
-  <p>I am a junior programmer with full-stack coding experience based in Java.</p>
-  <img src="\Pictures\2018-09-30 001\FB_IMG_1538341854022" alt="">
+<body>
+  <nav>
+    <a href="About Me">About Me</a> |
+    <a href="Projects">Projects</a> |
+  </nav>
 
-</section>
+  <h1>Jason Hochheiser</h1>
+  <h3>Jr. Programmer</h3>
+
+  <section>
+    <h2>About Me</h2>
+    <ul>
+      <li>I am a junior programmer with full-stack coding experience based in Java.</li>
+      <li><img src="\Pictures\2018-09-30 001\FB_IMG_1538341854022" alt="Dodge Viper"></li>
+      <li>Cell Number: (614)-353-8159 / Email: jsunh98@gmail.com</li>
+      <li>
+        <nav><a href="https://jsunh98.github.io/"></a></nav>
+      </li>
+      <li>Skills:
+        <ul>
+          <li>some full-stack developement</li>
+          <li>commodities and futures trading experience</li>
+          <li>medical dispatching</li>
+        </ul>
+      </li>
+  </section>
 
 
+<footer>c</footer>
 
+</body>
 
-  </body>
 </html>
