trying photo again

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <h2>About Me</h2>
     <ul>
       <li>I am a junior programmer with full-stack coding experience based in Java.</li>
-      <li><img src="\images\vipermotorvice.jpg" alt="Dodge Viper"></li>
+      <li><img src="/images/vipermotorvice.jpg" alt="Dodge Viper"></li>
       <li>Cell Number: (614)-353-8159 / Email: jsunh98@gmail.com</li>
       <li>
         <nav><a href="https://jsunh98.github.io/"></a></nav>
