--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <h2>About Me</h2>
     <ul>
       <li>I am a junior programmer with full-stack coding experience based in Java.</li>
-      <li><img src="/images/vipermotorvice.jpg" alt="Dodge Viper"></li>
+      <li><img src="https://scontent-amt2-1.cdninstagram.com/vp/24b1c38963fcce7596db939ed3a72455/5CE4866A/t51.2885-15/e35/42480829_710828212612932_7301568158701511423_n.jpg?_nc_ht=scontent-amt2-1.cdninstagram.com" alt="Dodge Viper and Lamborghini Countach"></li>
       <li>Cell Number: (614)-353-8159 / Email: jsunh98@gmail.com</li>
       <li>
         <nav><a href="https://jsunh98.github.io/"></a></nav>
