image size edit

--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
     <h2>About Me</h2>
     <ul>
       <li>I am a junior programmer with full-stack coding experience based in Java.</li>
+          <figure>
       <li><img src="/images/vipermotorvice.jpg" alt="Dodge Viper"></li>
+          </figure>
       <li>Cell Number: (614)-353-8159 / Email: jsunh98@gmail.com</li>
       <li>
         <nav><a href="https://jsunh98.github.io/"></a></nav>
