--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <ul>
       <li>I am a junior programmer with full-stack coding experience based in Java.</li>
           <figure>
-      <li><img src="/images/vipermotorvice.jpg" alt="Dodge Viper"></li>
+      <li><img src="/images/vipermotorvice.jpg" alt="Dodge Viper" class ="center"></li>
           </figure>
       <li>Cell Number: (614)-353-8159 / Email: jsunh98@gmail.com</li>
       <li>
