--- a/index.html
+++ b/index.html
@@ -2,26 +2,35 @@
 <html lang="en" dir="ltr">
 
 <head>
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="css/style.css">
   <meta charset="utf-8">
   <title>Jason Hochheiser</title>
 </head>
 
 <body>
+  <div class="container">
+
+
   <nav>
     <a href="About Me">About Me</a> |
     <a href="Projects">Projects</a> |
   </nav>
 
   <h1>Jason Hochheiser</h1>
-  <h3>Jr. Programmer</h3>
+  <h3 class="subtitle">Jr. Programmer</h3>
 
   <section>
-    <h2>About Me</h2>
+    <h2 class="aboutme">About Me</h2>
     <ul>
       <li>I am a junior programmer with full-stack coding experience based in Java.</li>
           <figure>
       <li><img src="/images/vipermotorvice.jpg" alt="Dodge Viper" ></li>
+          </figure>
+          <figure>
+    <video width="500" height="350" controls>
+      <source src="media/bugattidriveby.mp4" autoplay poster="bugatti">
+
+    </video>
           </figure>
       <li>Cell Number: (614)-353-8159 / Email: jsunh98@gmail.com</li>
       <li>
@@ -37,8 +46,9 @@
   </section>
 
 
-  <footer>&#169; Jason Hochheiser</footer>
 
+  <footer>&#169; Jason Hochheiser</footer>
+</div "ends container">
 </body>
 
 </html>
