finished for now

--- a/index.html
+++ b/index.html
@@ -11,44 +11,92 @@
   <div class="container">
 
 
-  <nav>
-    <a href="About Me">About Me</a> |
-    <a href="Projects">Projects</a> |
-  </nav>
+    <nav>
+      <a href="About Me">About Me</a> |
+      <a href="Projects">Projects</a> |
+    </nav>
 
-  <h1>Jason Hochheiser</h1>
-  <h3 class="subtitle">Jr. Programmer</h3>
 
-  <section>
-    <h2 class="aboutme">About Me</h2>
-    <ul>
-      <li>I am a junior programmer with full-stack coding experience based in Java.</li>
-          <figure>
-      <li><img src="/images/vipermotorvice.jpg" alt="Dodge Viper" ></li>
-          </figure>
-          <figure>
-    <video width="500" height="350" controls>
-      <source src="media/bugattidriveby.mp4" autoplay poster="bugatti">
 
-    </video>
-          </figure>
-      <li>Cell Number: (614)-353-8159 / Email: jsunh98@gmail.com</li>
-      <li>
-        <nav><a href="https://jsunh98.github.io/"></a></nav>
-      </li>
-      <li>Skills:
+    <header>
+      <div class="header">
+        <h1>Jason Hochheiser</h1>
+        <h3 class="subtitle">Jr. Programmer</h3>
+      </div>
+    </header>
+
+
+    <div class="aboutme">
+      <h2>About Me</h2>
+
+      <p class="aboutme_p"> A full-stack junior software developer with a passion for problem solving and analytics.. building things. staying on the cutting edge of technology. Logistics and organization.AI, Blockchain. With interests involving
+        commodities and futures
+        trading, real estate investment, and classic auto investments.
+      </p>
+    </div>
+    <figure>
+      <img src="images/vipermotorvice.jpg" alt="Dodge Viper">
+    </figure>
+
+
+    <div class="skills">
+      <h2>Skills</h2>
+      <p>Java • Spring • Hibernate • JPA • JavaScript • MVC • HTML5 • CSS3 • Flexbox • Grid • TDD • Agile (Scrum) • Object Oriented Programming (OOP) • AJAX • JSON • Restful APIs • Responsive Design / Mobile • Structured Query Language (SQL) •
+        Relational Databases • Source Control
+      </p>
+    </div>
+    <div class="projects">
+      <div class="projects-p2">
+        <h2 class="projects_title">Projects</h2>
+        <p class="project_p1">Here's a link to my <a href="https://jsunh98.github.io/">github</a> site. And here are some of my projects:</p>
         <ul>
-          <li>some full-stack developement</li>
-          <li>commodities and futures trading experience</li>
-          <li>medical dispatching</li>
-        </ul>
-      </li>
-  </section>
+          <li class="projects_hospital"><a href="https://github.com/jsunh98/hospital-high.git">Hospital-High</a></li>
+          <p class="project_p2">This is a Java project.</p>
+      </div>
+      <figure>
+        <img src="images/hospital-high.png" alt="hospital-high project">
+      </figure>
+      <div class="projects-vp-p3">
+        <li class="projects_virtual-pet"><a href="https://github.com/jsunh98/virutual-pet.git">Virtual Pet</a></li>
+        <p class="project_p3">Here's another Java project.</p>
+      </div>
+      <figure>
+        <img src="images/virtual-pet.png" alt="virtual-pet project">
+      </figure>
+      <div class="projects-das-p">
+        <li class="projects_dasmoto"><a href="https://github.com/jsunh98/prj-rev-bwfs-dasmoto.git">Dasmoto</a></li>
+        <p>This one is an html/css project.</p>
+      </div>
+      <figure>
+        <img src="images/Dasmoto.png" alt="Dasmoto project">
+      </figure>
+      </ul>
+    </div>
+
+    <div class="contact">
+      <h2 class="contact-title">Contact Info:</h2>
+      <p class="phone">Cell Number: (614)-353-8159</p>
+      <p class="email"><a href="Email: jsunh98@gmail.com">Email</a></p>
+      <a href="https://www.linkedin.com/in/jason-hochheiser-8a6a4086/" target="_blank">
+        <img src="/images/social-linkedin-button-blue.png" alt="linkedin icon">
+      </a>
+    </div>
 
 
 
-  <footer>&#169; Jason Hochheiser</footer>
-</div "ends container">
+    <!-- <li>Skills:
+      <ul>
+        <li>some full-stack developement</li>
+        <li>commodities and futures trading experience</li>
+        <li>medical dispatching</li>
+      </ul>
+    </li> -->
+    <!-- </section> -->
+
+
+
+    <footer>&#169; Jason Hochheiser</footer>
+  </div "ends container">
 </body>
 
 </html>
