--- a/index.html
+++ b/index.html
@@ -29,9 +29,8 @@
     <div class="aboutme">
       <h2>About Me</h2>
 
-      <p class="aboutme_p"> A full-stack junior software developer with a passion for problem solving and analytics.. building things. staying on the cutting edge of technology. Logistics and organization.AI, Blockchain. With interests involving
-        commodities and futures
-        trading, real estate investment, and classic auto investments.
+      <p class="aboutme_p"> A full-stack junior software developer with a passion for problem solving and analytics. Staying on the cutting edge of technology with a focus in Fintech, Blockchain, and Artificial Intelligence. With a strong background in logistics and organization, and interests involving commodities and futures trading, real estate investment, and classic auto investments.
+
       </p>
     </div>
     <figure>
@@ -66,7 +65,7 @@
 
         <li class="projects_dasmoto"><a href="https://github.com/jsunh98/prj-rev-bwfs-dasmoto.git">Dasmoto</a></li>
         <p>This one is an html/css project.</p>
-    
+
       <figure>
         <img src="images/Dasmoto.png" alt="Dasmoto project">
       </figure>
