updated background and grid

--- a/index.html
+++ b/index.html
@@ -3,99 +3,72 @@
 
 <head>
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
   <meta charset="utf-8">
   <title>Jason Hochheiser</title>
 </head>
 
 <body>
+  <!-- <div class="hero-image"> -->
+
+
   <div class="container">
-
-
-    <nav>
-      <a href="About Me">About Me</a> |
-      <a href="Projects">Projects</a> |
-    </nav>
-
 
 
     <header>
       <div class="header">
-        <h1>Jason Hochheiser</h1>
-        <h3 class="subtitle">Jr. Programmer</h3>
+        <h1 class="header_item">Jason Hochheiser</h1>
+        <h3 class="header_item">Junior Full Stack Java Developer</h3>
       </div>
     </header>
-
-
-    <div class="aboutme">
-      <h2>About Me</h2>
-
-      <p class="aboutme_p"> A full-stack junior software developer with a passion for problem solving and analytics. Staying on the cutting edge of technology with a focus in Fintech, Blockchain, and Artificial Intelligence. With a strong background in logistics and organization, and interests involving commodities and futures trading, real estate investment, and classic auto investments.
-
-      </p>
+    <main>
+      <div class="grid_container">
+        <div class="skills">
+          <h2>Skills</h2>
+          <p class="skills_list">Java • Spring • Hibernate • JPA • JavaScript • MVC • HTML5 • CSS3 • Flexbox • Grid • TDD • Agile (Scrum) • Object Oriented Programming (OOP) • AJAX • JSON • Restful APIs • Responsive Design / Mobile • Structured Query Language (SQL) •
+            Relational Databases • Source Control
+          </p>
+        </div>
+        <div class="aboutme">
+          <h2>About Me</h2>
+          <p class="aboutme_p">   A full-stack junior software developer with a passion for problem solving and analytics. Staying on the cutting edge of technology with a focus in Fintech, Blockchain, and Artificial Intelligence. With a strong
+            background in logistics and organization, and interests involving commodities and futures trading, real estate investment, and classic auto investments.
+          </p>
+        </div>
+        <div class="projects">
+          <h2 class="projects_title">Projects</h2>
+          <p class="project_p1">Click on the screenshots below to see my most recent work:</p>
+          <ul>
+            <li class="projects_hospital"></li>
+            <p class="project_p2">This is a Java project.</p>
+            <figure>
+              <a href="https://github.com/jsunh98/hospital-high.git"><img src="images/hospital-high.png" alt="hospital-high project"></a>
+            </figure>
+            <li class="projects_virtual-pet">Virtual Pet</a></li>
+            <p class="project_p3">Here's another Java project.</p>
+            <figure>
+              <a href="https://github.com/jsunh98/virutual-pet.git"><img src="images/virtual-pet.png" alt="virtual-pet project"></a>
+            </figure>
+            <li class="projects_dasmoto"></li>
+            <p>This one is an html/css project.</p>
+            <figure>
+              <a href="https://github.com/jsunh98/prj-rev-bwfs-dasmoto.git"><img src="images/Dasmoto.png" alt="Dasmoto project"></a>
+            </figure>
+          </ul>
+        </div>
+      </div>
     </div>
-    <figure>
-      <img src="images/vipermotorvice.jpg" alt="Dodge Viper">
-    </figure>
-
-
-    <div class="skills">
-      <h2>Skills</h2>
-      <p>Java • Spring • Hibernate • JPA • JavaScript • MVC • HTML5 • CSS3 • Flexbox • Grid • TDD • Agile (Scrum) • Object Oriented Programming (OOP) • AJAX • JSON • Restful APIs • Responsive Design / Mobile • Structured Query Language (SQL) •
-        Relational Databases • Source Control
-      </p>
-    </div>
-    <div class="projects">
-
-        <h2 class="projects_title">Projects</h2>
-        <p class="project_p1">Here's a link to my <a href="https://jsunh98.github.io/">github</a> site. And here are some of my projects:</p>
-        <ul>
-          <li class="projects_hospital"><a href="https://github.com/jsunh98/hospital-high.git">Hospital-High</a></li>
-          <p class="project_p2">This is a Java project.</p>
-
-      <figure>
-        <img src="images/hospital-high.png" alt="hospital-high project">
-      </figure>
-
-        <li class="projects_virtual-pet"><a href="https://github.com/jsunh98/virutual-pet.git">Virtual Pet</a></li>
-        <p class="project_p3">Here's another Java project.</p>
-
-      <figure>
-        <img src="images/virtual-pet.png" alt="virtual-pet project">
-      </figure>
-
-        <li class="projects_dasmoto"><a href="https://github.com/jsunh98/prj-rev-bwfs-dasmoto.git">Dasmoto</a></li>
-        <p>This one is an html/css project.</p>
-
-      <figure>
-        <img src="images/Dasmoto.png" alt="Dasmoto project">
-      </figure>
-      </ul>
-    </div>
-
+    </main>
     <div class="contact">
       <h2 class="contact-title">Contact Info:</h2>
       <p class="phone">Cell Number: (614)-353-8159</p>
-      <p class="email"><a href="Email: jsunh98@gmail.com">Email</a></p>
-      <a href="https://www.linkedin.com/in/jason-hochheiser-8a6a4086/" target="_blank">
-        <img src="/images/social-linkedin-button-blue.png" alt="linkedin icon">
-      </a>
+      <a href="jsunh98@gmail.com"><i class="far fa-envelope"></i></a>
+      <a href="https://github.com/jsunh98" target="_blank"><i class="fab fa-github"></i></a>
+      <a href="https://www.linkedin.com/in/jason-hochheiser-8a6a4086/" target="_blank"><i class="fab fa-linkedin"></i></a>
     </div>
 
-
-
-    <!-- <li>Skills:
-      <ul>
-        <li>some full-stack developement</li>
-        <li>commodities and futures trading experience</li>
-        <li>medical dispatching</li>
-      </ul>
-    </li> -->
-    <!-- </section> -->
-
-
-
     <footer>&#169; Jason Hochheiser</footer>
-  </div "ends container">
+    <!-- </div> -->
 </body>
 
 </html>
