--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div id="aboutModal" class="modal">
           <div class="modal-content">
             <span class="close close1" data-dismiss="modal1">&times;</span>
-            <img class="modalImg" src="C:\Users\jsunh98\wcci\code\jsunh98.github.io\src\main\static\images\myface.jpg" alt="myface">
+            <img class="modalImg" src="./images/myface.jpg" alt="myface">
             <h2>Jason Hochheiser</h2>
             <p class="aboutme_p">A full-stack junior software developer with a passion for problem solving and analytics. Staying on the cutting edge of technology with a focus in Fintech, Blockchain, and Artificial Intelligence. With a strong
               background in logistics and organization, and interests involving commodities and futures trading, real estate investment, and classic auto investments.
@@ -59,36 +59,48 @@
         <div class="carousel-container">
           <i class="fas fa-arrow-circle-right" id="nextBtn"></i>
           <i class="fas fa-arrow-circle-left" id="prevBtn"></i>
+          <div class="carousel">
             <div class="carousel-slide">
-              <a href="https://github.com/jsunh98/prj-rev-bwfs-dasmoto.git"><img src="C:\Users\jsunh98\wcci\code\jsunh98.github.io\src\main\static\images\Dasmoto.png" id="lastClone" alt="Dasmoto project"></a>
-              <a href="https://github.com/jsunh98/hospital-high.git"><img src="C:\Users\jsunh98\wcci\code\jsunh98.github.io\src\main\static\images\hospital-high.png" alt="hospital-high project"></a>
-              <a href="https://github.com/jsunh98/virutual-pet.git"><img src="C:\Users\jsunh98\wcci\code\jsunh98.github.io\src\main\static\images\virtual-pet.png" alt="virtual-pet project"></a>
-              <a href="https://github.com/jsunh98/prj-rev-bwfs-dasmoto.git"><img src="C:\Users\jsunh98\wcci\code\jsunh98.github.io\src\main\static\images\Dasmoto.png" alt="Dasmoto project"></a>
-              <a href="https://github.com/jsunh98/hospital-high.git"><img src="C:\Users\jsunh98\wcci\code\jsunh98.github.io\src\main\static\images\hospital-high.png" id="firstClone"alt="hospital-high project"></a>
+              <figure class="carousel-slide-item">
+                <a href="https://github.com/jsunh98/hospital-high.git"><img src="./images/hospital-high.png" id="lastClone" alt="hospital-high project"></a>
+              </figure>
+              <figure class="carousel-slide-item">
+                <a href="https://github.com/jsunh98/prj-rev-bwfs-dasmoto.git"><img src="./images/Dasmoto.png" alt="Dasmoto project"></a>
+              </figure>
+              <figure class="carousel-slide-item">
+                <a href="https://github.com/jsunh98/virutual-pet.git"><img src="./images/virtual-pet.png" alt="virtual-pet project"></a>
+              </figure>
+              <figure class="carousel-slide-item">
+                <a href="https://github.com/jsunh98/prj-rev-bwfs-dasmoto.git"><img src="./images/Dasmoto.png" alt="Dasmoto project"></a>
+              </figure>
+              <figure class="carousel-slide-item">
+                <a href="https://github.com/jsunh98/hospital-high.git"><img src="./images/hospital-high.png" id="firstClone" alt="hospital-high project"></a>
+              </figure>
             </div>
-        <!-- <div class="projects">
-          <h2 class="projects_title">Projects</h2>
-          <p class="project_p1">Click on the screenshots below to see my most recent work:</p>
-          <ul>
-            <li class="projects_hospital"></li>
-            <p class="project_p2">This is a Java project.</p>
-            <figure>
+          </div>
+          <!-- <div class="projects">
+              <h2 class="projects_title">Projects</h2>
+              <p class="project_p1">Click on the screenshots below to see my most recent work:</p>
+              <ul>
+              <li class="projects_hospital"></li>
+              <p class="project_p2">This is a Java project.</p>
+              <figure>
 
             </figure>
             <li class="projects_virtual-pet">Virtual Pet</a></li>
             <p class="project_p3">Here's another Java project.</p>
             <figure>
 
-            </figure>
-            <li class="projects_dasmoto"></li>
-            <p>This one is an html/css project.</p>
-            <figure>
+          </figure>
+          <li class="projects_dasmoto"></li>
+          <p>This one is an html/css project.</p>
+          <figure>
 
-            </figure>
-          </ul>
-        </div> -->
+        </figure>
+      </ul>
+    </div> -->
+        </div>
       </div>
-  
     </main>
 
     <div class="contact">
@@ -98,13 +110,13 @@
       <a href="https://github.com/jsunh98" target="_blank"><i class="fab fa-github"></i></a>
       <a href="https://www.linkedin.com/in/jasonhochheiser/" target="_blank"><i class="fab fa-linkedin"></i></a>
     </div>
-
-    <footer>&#169; Jason Hochheiser</footer>
+  </div>
+  <footer>&#169; Jason Hochheiser</footer>
 
   <script src="./js/app.js">
 
   </script>
-  </div>
+
 </body>
 
 </html>
