--- a/index.html
+++ b/index.html
@@ -1,26 +1,56 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="en">
 
 <head>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-  <!-- <meta charset="utf-8"> -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <link rel="stylesheet" href="css/style.css" />
+  <link href="https://fonts.googleapis.com/css?family=Fahkwang&display=swap" rel="stylesheet">
+  <!-- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous"> -->
   <title>Jason Hochheiser</title>
 </head>
 
 <body>
-  <!-- <div class="hero-image"> -->
 
 
-  <div class="container">
+  <!-- <div class="container"> -->
 
 
-    <header>
+
+  <!-- <header>
       <div class="header">
         <h1 class="header_item">JH</h1>
-        <!-- <h3 class="header_item">Junior Full Stack Java Developer</h3> -->
-      </div>
+      <h3 class="header_item">Junior Full Stack Java Developer</h3> -->
+  <!-- </div> -->
+
+  <nav>
+    <div class="logo">
+      <h4>Jason Hochheiser</h4>
+    </div>
+    <ul class="nav-links">
+      <li><a href="#">Home</a></li>
+      <li><a href="#">About</a></li>
+      <li><a href="#">Contact</a></li>
+      <li><a href="#">Projects</a></li>
+    </ul>
+    <div class="hamburger">
+      <div class="line1"></div>
+      <div class="line2"></div>
+      <div class="line3"></div>
+    </div>
+  </nav>
+
+  <section>
+    <main>
+      <div class="hero-image">
+        <!-- <section class="landing">
+      <img src="C:\Users\jsunh98\WCCI\code\jsunh98.github.io\images\circles.svg" alt="dots" />
+      <h1>JH</h1>
+    </section> -->
+
+        <!-- <section class="landing">
+        <img
 
       <div class="navList" id="myNav">
         <a href="#home" class="active">Home</a>
@@ -30,9 +60,10 @@
         <a href="#projects">Projects</a>
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
           <i class="fas fa-hamburger"></a></li>
-      </div>
+      </div>   -->
 
-    </header>
+        <!-- </header> -->
+        <!-- <div class="container">
     <main>
       <div class="grid_container">
 
@@ -55,8 +86,8 @@
               Relational Databases • Source Control
             </p>
           </div>
-        </div>
-        <div class="carousel-container">
+        </div> -->
+        <!-- <div class="carousel-container">
           <i class="fas fa-arrow-circle-right" id="nextBtn"></i>
           <i class="fas fa-arrow-circle-left" id="prevBtn"></i>
           <div class="carousel">
@@ -77,8 +108,8 @@
                 <a href="https://github.com/jsunh98/hospital-high.git"><img src="./images/hospital-high.png" id="firstClone" alt="hospital-high project"></a>
               </figure>
             </div>
-          </div>
-          <!-- <div class="projects">
+          </div> -->
+        <!-- <div class="projects">
               <h2 class="projects_title">Projects</h2>
               <p class="project_p1">Click on the screenshots below to see my most recent work:</p>
               <ul>
@@ -99,7 +130,7 @@
         </figure>
       </ul>
     </div> -->
-        </div>
+        <!-- </div>
       </div>
     </main>
 
@@ -111,12 +142,14 @@
       <a href="https://www.linkedin.com/in/jasonhochheiser/" target="_blank"><i class="fab fa-linkedin"></i></a>
     </div>
   </div>
-  <footer>&#169; Jason Hochheiser</footer>
+  <footer>&#169; Jason Hochheiser</footer> -->
+      </div>
+    </main>
+  </section>
 
-  <script src="./js/app.js">
+  <script src="app.js">
 
   </script>
-
 </body>
 
 </html>
