added about me card

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="css/aboutme.css"/>
   <link href="https://fonts.googleapis.com/css?family=Fahkwang&display=swap" rel="stylesheet">
   <!-- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous"> -->
   <title>Jason Hochheiser</title>
@@ -43,7 +44,19 @@
 
   <section>
     <main>
-      <div class="hero-image">
+      <div class="container">
+        <!-- beginnning of aboutme card -->
+        <div class="card">
+          <input type="checkbox" name="">
+          <div class="aboutToggle">+</div>
+          <div class="imgBx"></div>
+            <img id="aboutImage" src="images/myface.jpg">
+          <div class="content">
+            <h2>Jason Hochheiser</h2>
+            <p class="aboutme_p">A full-stack junior software developer with a passion for problem solving and analytics. Staying on the cutting edge of technology with a focus in Fintech, Blockchain, and Artificial Intelligence. With a strong
+            background in logistics and organization, and interests involving commodities and futures trading, real estate investment, and classic auto investments.
+            </p></div>
+        </div>
         <!-- <section class="landing">
       <img src="C:\Users\jsunh98\WCCI\code\jsunh98.github.io\images\circles.svg" alt="dots" />
       <h1>JH</h1>
