worked on about card and nav changes

--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <link rel="stylesheet" href="css/style.css" />
-  <link rel="stylesheet" href="css/aboutme.css"/>
+  <link rel="stylesheet" href="css/aboutme.css" />
   <link href="https://fonts.googleapis.com/css?family=Fahkwang&display=swap" rel="stylesheet">
-  <!-- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous"> -->
+  <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
   <title>Jason Hochheiser</title>
 </head>
 
@@ -19,29 +20,24 @@
 
 
 
-  <!-- <header>
-      <div class="header">
-        <h1 class="header_item">JH</h1>
-      <h3 class="header_item">Junior Full Stack Java Developer</h3> -->
-  <!-- </div> -->
-
-  <nav>
-    <div class="logo">
-      <h4>Jason Hochheiser</h4>
-    </div>
-    <ul class="nav-links">
-      <li><a href="#">Home</a></li>
-      <li><a href="#">About</a></li>
-      <li><a href="#">Contact</a></li>
-      <li><a href="#">Projects</a></li>
-    </ul>
-    <div class="hamburger">
-      <div class="line1"></div>
-      <div class="line2"></div>
-      <div class="line3"></div>
-    </div>
-  </nav>
-
+  <header>
+    <nav>
+      <div class="logo">
+        <h4>Jason Hochheiser</h4>
+      </div>
+      <ul class="nav-links">
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Contact</a></li>
+        <li><a href="#">Projects</a></li>
+      </ul>
+      <div class="hamburger">
+        <div class="line1"></div>
+        <div class="line2"></div>
+        <div class="line3"></div>
+      </div>
+    </nav>
+  </header>
   <section>
     <main>
       <div class="container">
@@ -50,12 +46,20 @@
           <input type="checkbox" name="">
           <div class="aboutToggle">+</div>
           <div class="imgBx"></div>
-            <img id="aboutImage" src="images/myface.jpg">
+          <img id="aboutImage" src="images/myface.jpg">
           <div class="content">
             <h2>Jason Hochheiser</h2>
             <p class="aboutme_p">A full-stack junior software developer with a passion for problem solving and analytics. Staying on the cutting edge of technology with a focus in Fintech, Blockchain, and Artificial Intelligence. With a strong
-            background in logistics and organization, and interests involving commodities and futures trading, real estate investment, and classic auto investments.
-            </p></div>
+              background in logistics and organization, and interests involving commodities and futures trading, real estate investment, and classic auto investments.
+            </p>
+            <div class="contact">
+              <!-- <h2 class="contact-title">Contact Info:</h2>
+              <p class="phone">Cell Number: (614)-353-8159</p> -->
+              <a href="jsunh98@gmail.com"><i class="far fa-envelope"></i></a>
+              <a href="https://github.com/jsunh98" target="_blank"><i class="fab fa-github"></i></a>
+              <a href="https://www.linkedin.com/in/jasonhochheiser/" target="_blank"><i class="fab fa-linkedin"></i></a>
+            </div>
+          </div>
         </div>
         <!-- <section class="landing">
       <img src="C:\Users\jsunh98\WCCI\code\jsunh98.github.io\images\circles.svg" alt="dots" />
@@ -75,7 +79,7 @@
           <i class="fas fa-hamburger"></a></li>
       </div>   -->
 
-        <!-- </header> -->
+
         <!-- <div class="container">
     <main>
       <div class="grid_container">
