--- a/index.html
+++ b/index.html
@@ -2,44 +2,32 @@
 <html lang="en">
 
 <head>
-  <meta charset="utf-8">
+  <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <link rel="stylesheet" href="css/style.css" />
-  <link href="https://fonts.googleapis.com/css?family=Fahkwang&display=swap" rel="stylesheet">
-  <!-- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous"> -->
-  <title>Jason Hochheiser</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0/css/all.min.css" integrity="sha256-ybRkN9dBjhcS2qrW1z+hfCxq+1aBdwyQM5wlQoQVt/0=" crossorigin="anonymous" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" />
+
 </head>
 
 <body>
 
-
-  <!-- <div class="container"> -->
-
-
-
-  <!-- <header>
-      <div class="header">
-        <h1 class="header_item">JH</h1>
-      <h3 class="header_item">Junior Full Stack Java Developer</h3> -->
-  <!-- </div> -->
-
-  <nav>
+  <header>
     <div class="logo">
-      <h4>Jason Hochheiser</h4>
+      <img src="C:\Users\jsunh98\WCCI\code\jsunh98.github.io\images\vipersunrise.jpg" alt="vipersunrise">
     </div>
-    <ul class="nav-links">
-      <li><a href="#">Home</a></li>
-      <li><a href="#">About</a></li>
-      <li><a href="#">Contact</a></li>
-      <li><a href="#">Projects</a></li>
-    </ul>
-    <div class="hamburger">
-      <div class="line1"></div>
-      <div class="line2"></div>
-      <div class="line3"></div>
-    </div>
-  </nav>
+    <button class="nav-toggle" aria-label="toggle navigation">
+      <span class="hamburger"></span>
+    </button>
+    <nav class="nav">
+      <ul class="nav__list">
+        <li class="nav__item"><a href="#" class="nav__link">Home</a></li>
+        <li class="nav__item"><a href="#" class="nav__link">My Services</a></li>
+        <li class="nav__item"><a href="#" class="nav__link">About Me</a></li>
+        <li class="nav__item"><a href="#" class="nav__link">My Projects</a></li>
+      </ul>
+    </nav>
+
 
   <section>
     <main>
