--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <header>
     <div class="logo">
-      <img src="C:\Users\jsunh98\WCCI\code\jsunh98.github.io\images\vipersunrise.jpg" alt="vipersunrise">
+      <img src="images/vipersunrise.jpg" alt="vipersunrise">
     </div>
     <button class="nav-toggle" aria-label="toggle navigation">
       <span class="hamburger"></span>
@@ -27,7 +27,16 @@
         <li class="nav__item"><a href="#" class="nav__link">My Projects</a></li>
       </ul>
     </nav>
+  </header>
 
+  <!-- Introduction -->
+  <section class="into" id="home">
+      <h1 class="section__title section__title--intro">
+      Hi, I am <strong>Jason Hochheiser</strong>
+      </h1>
+      <p class="section__subtitle section__subtitle--intro">Full Stack Developer</p>
+      <img src="images/myface.jpg" alt="my face">
+  </section>
 
   <section>
     <main>
