added projects and footer html sections

--- a/index.html
+++ b/index.html
@@ -98,14 +98,30 @@
 
     <div class="portfolio">
       <!-- Portfolio item #1 -->
-      
-
+      <a href="#" class="portfolio__item">
+        <img src="images/virtual-pet.png" alt="" class="portfolio__img">
+      </a>
+      <a href="#" class="portfolio__item">
+        <img src="images/virtual-pet.png" alt="" class="portfolio__img">
+      </a>
+      <a href="#" class="portfolio__item">
+        <img src="images/virtual-pet.png" alt="" class="portfolio__img">
+      </a>
     </div>
 
 
     </div>
   </section>
 
+  <!-- Footer -->
+  <footer>
+    <!-- email address -->
+    <a href="jsunh98@gmail.com" class="footer__link">My Email</a>
+    <ul class="social-list">
+      <li class="social-list__item"><a href="#">a</a></li>
+      <li class="social-list__item"><a href="#">b</a></li>
+      <li class="social-list__item"><a href="#">c</a></li>
+    </ul>
 
 
 
