--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0/css/all.min.css" integrity="sha256-ybRkN9dBjhcS2qrW1z+hfCxq+1aBdwyQM5wlQoQVt/0=" crossorigin="anonymous" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" />
-  <link href="https://fonts.googleapis.com/css?family=Poppins|Roboto&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Poppins300,900|Roboto300,900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css" />
 </head>
 
@@ -36,7 +36,7 @@
       Hi, I am <strong>Jason Hochheiser</strong>
       </h1>
       <p class="section__subtitle section__subtitle--intro">Full Stack Developer</p>
-      <img src="images/myface.jpg" alt="my face">
+      <img src="images/myface.jpg" alt="my face" class="intro__img">
   </section>
 
   <!-- My Services -->
