added styling for about-me section

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
     </div>
 
-    <img src="images/sanibeldesk.jpg" alt="desk on the beach">
+    <img src="images/sanibeldesk.jpg" alt="desk on the beach" class="about-me__image">
   </section>
 
   <!-- My Projects -->
