--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" />
   <link href="https://fonts.googleapis.com/css?family=Poppins300,900|Roboto300,900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css" />
+  <script src="https://kit.fontawesome.com/6561d849e0.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -25,7 +26,7 @@
         <li class="nav__item"><a href="#home" class="nav__link">Home</a></li>
         <li class="nav__item"><a href="#services" class="nav__link">My Services</a></li>
         <li class="nav__item"><a href="#about" class="nav__link">About Me</a></li>
-        <li class="nav__item"><a href="#projects" class="nav__link">My Projects</a></li>
+        <li class="nav__item"><a href="#projects" class="nav__link">My Projects</i></a></li>
       </ul>
     </nav>
   </header>
@@ -95,18 +96,27 @@
   <!-- My Projects -->
   <section class="my-projects" id="projects">
     <h2 class="section__title">My Projects</h2>
-    <p class="section__subtitle">lorem ipsum</p>
+    <p class="section__subtitle section__subtitle--projects">Here are some of my projects</p>
 
     <div class="portfolio">
       <!-- Portfolio item #1 -->
-      <a href="#" class="portfolio__item">
+      <a href="#projects" class="portfolio__item">
+        <img src="images/kansasblur.jpg" alt="" class="portfolio__img">
+      </a>
+      <a href="#projects" class="portfolio__item">
+        <img src="images/utah2.jpg" alt="" class="portfolio__img">
+      </a>
+      <a href="#projects" class="portfolio__item">
+        <img src="images/hospital-high.png" alt="" class="portfolio__img">
+      </a>
+      <a href="#projects" class="portfolio__item">
         <img src="images/virtual-pet.png" alt="" class="portfolio__img">
       </a>
-      <a href="#" class="portfolio__item">
-        <img src="images/virtual-pet.png" alt="" class="portfolio__img">
+      <a href="#projects" class="portfolio__item">
+        <img src="images/utahroad.jpg" alt="" class="portfolio__img">
       </a>
-      <a href="#" class="portfolio__item">
-        <img src="images/virtual-pet.png" alt="" class="portfolio__img">
+      <a href="#projects" class="portfolio__item">
+        <img src="images/boatflag.jpg" alt="" class="portfolio__img">
       </a>
     </div>
 
@@ -116,12 +126,12 @@
 
   <!-- Footer -->
   <footer>
-    <!-- email address -->
-    <a href="jsunh98@gmail.com" class="footer__link">My Email</a>
+    <!-- social icons -->
+
     <ul class="social-list">
-      <li class="social-list__item"><a href="#">a</a></li>
-      <li class="social-list__item"><a href="#">b</a></li>
-      <li class="social-list__item"><a href="#">c</a></li>
+      <li class="social-list__item"><a href="https://linkedin.com/in/jasonhochheiser" target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
+      <li class="social-list__item"><a href="mailto: jsunh98@gmail.com" ><i class="fas fa-envelope-square"></i></a></li>
+      <li class="social-list__item"><a href="https://github.com/jsunh98" target="_blank"><i class="fab fa-github"></i></a></li>
     </ul>
 
 
